# deskew

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .whitesource  CHANGELOG.md  LICENSE  LICENSE.md  Pipfile  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.dependabot/: config.yaml
.github/: changelog-config.yaml  dependabot.yaml  publish.yaml  renovate.json5
.github/workflows/: audit.yaml  changelog.yaml  codeql.yaml  delete-old-workflow-run.yaml  delete-old-workflows-run.yaml  dependabot-auto-merge.yaml  dependency-auto-review.yaml  dependency-update-review.yaml  main.yaml  pr-check.yaml  pr-checks.yaml  pull-request-automation.yaml
ci/: config.yaml  requirements.txt
deskew/: __init__.py  cli.py  plot.py
tests/: test_deskew.py
