[tool.black]
line-length = 110
target-version = ["py39"]

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict = true

[tool.pytest.ini_options]
pytest_plugins = ["pytest_profiling"]

[tool.poetry]
name = "deskew"
version = "0.0.0"
description = "Skew detection and correction in images containing text"
readme = "README.md"
authors = ["Stéphane Brunner <stephane.brunner@gmail.com>"]
homepage = "https://github.com/sbrunner/deskew"
repository = "https://github.com/sbrunner/deskew"
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Typing :: Typed"
]
packages = [{ include = "deskew" }, { include = "deskew/py.typed" }]

[tool.poetry.scripts]
deskew = "deskew.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "1.26.2"
scikit-image = "0.22.0"
opencv-python-headless = { version = "4.8.1.78", optional = true }
matplotlib = { version = "3.8.2", optional = true }

[tool.poetry.extras]
debug_images = ["opencv-python-headless", "matplotlib"]

[tool.poetry.group.dev.dependencies]
prospector = { extras = ["with_bandit", "with_mypy", "with_pyroma"], version = "1.10.3" }
pytest = "7.4.3"
pytest-profiling = "1.7.0"
coverage = "7.3.2"
prospector-profile-duplicated = "0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version", "poetry-plugin-drop-python-upper-constraint"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "version_branch" -%}
{{serialize_pep440(bump_version(base, 1 if env.get("IS_MASTER") == "TRUE" else 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"
