[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
pytest_plugins = ["pytest_profiling"]

[tool.poetry]
name = "deskew"
version = "0.0.0"
description = "Skew detection and correction in images containing text"
readme = "README.md"
authors = ["Stéphane Brunner <stephane.brunner@gmail.com>"]
homepage = "https://github.com/sbrunner/deskew"
repository = "https://github.com/sbrunner/deskew"
license = "MIT"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]
packages = [{ include = "deskew" }, { include = "deskew/py.typed" }]

[tool.poetry.scripts]
deskew = "deskew.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "2.2.3"
scikit-image = "0.25.2"
opencv-python-headless = { version = "4.11.0.86", optional = true }
matplotlib = { version = "3.10.1", optional = true }

[tool.poetry.extras]
debug_images = ["opencv-python-headless", "matplotlib"]

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.16.1", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.22.3"
pytest = "8.3.4"
pytest-profiling = "1.8.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version", "poetry-plugin-drop-python-upper-constraint"]
build-backend = "poetry.core.masonry.api"
